DEMO: add local config files

--- a/crio.demo.conf
+++ b/crio.demo.conf
@@ -39,6 +39,7 @@
 # It is used to check if crio wipe should wipe containers, which should
 # always happen on a node reboot
 # version_file = "/var/run/crio/version"
+version_file = "/var/run/crio.marquiz/version"
 
 # Location for CRI-O to lay down the persistent version file.
 # It is used to check if crio wipe should wipe images, which should
@@ -59,6 +60,7 @@
 
 # Path to AF_LOCAL socket on which CRI-O will listen.
 # listen = "/var/run/crio/crio.sock"
+listen = "/var/run/crio.marquiz/crio.sock"
 
 # IP address on which the stream server will listen.
 # stream_address = "127.0.0.1"
@@ -119,6 +121,7 @@
 # Cgroup setting for conmon
 # This option is currently deprecated, and will be replaced with RuntimeHandler.MonitorCgroup.
 # conmon_cgroup = ""
+conmon_cgroup = "pod"
 
 # Environment variable list for the conmon process, used for passing necessary
 # environment variables to conmon or the runtime.
@@ -156,6 +159,7 @@
 # Path to the blockio class configuration file for configuring
 # the cgroup blockio controller.
 # blockio_config_file = ""
+blockio_config_file = "/home/marquiz/go/git/cri-o/d-class-resources/blockio.conf.yaml"
 
 # Used to change irqbalance service config file path which is used for configuring
 # irqbalance daemon.
@@ -164,6 +168,7 @@
 # Path to the RDT configuration file for configuring the resctrl pseudo-filesystem.
 # This option supports live configuration reload.
 # rdt_config_file = ""
+rdt_config_file = "/home/marquiz/go/git/cri-o/d-class-resources/rdt.conf.yaml"
 
 # Cgroup management implementation used for the runtime.
 # cgroup_manager = "systemd"
@@ -255,9 +260,11 @@
 
 # Path to directory in which container exit files are written to by conmon.
 # container_exits_dir = "/var/run/crio/exits"
+container_exits_dir = "/var/run/crio.marquiz/exits"
 
 # Path to directory for container attach sockets.
 # container_attach_socket_dir = "/var/run/crio"
+container_attach_socket_dir = "/var/run/crio.marquiz"
 
 # The prefix to use for the source of the bind mounts.
 # bind_mount_prefix = ""
@@ -385,6 +392,8 @@
 
 # [crio.runtime.runtimes.runc]
 # runtime_path = ""
+[crio.runtime.runtimes.runc]
+runtime_path = "/home/marquiz/go/git/runc/runc"
 # runtime_type = "oci"
 # runtime_root = "/run/runc"
 # runtime_config_path = ""
@@ -485,6 +494,7 @@
 
 # Path to the directory where CNI configuration files are located.
 # network_dir = "/etc/cni/net.d/"
+network_dir = "/etc/cni/net.d.marquiz/"
 
 # Paths to directories where CNI plugin binaries are located.
 # plugin_dirs = [
